<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/borda_login"
    android:backgroundTint="@android:color/white"
    tools:context=".view.BookActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/layoutResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:textSize="20dp"
            android:textColor="#3d5d7c"
            android:text="" />

        <LinearLayout
            android:id="@+id/layoutBtn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:visibility="invisible">

            <TextView
                android:id="@+id/pergunta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20dp"
                android:textColor="#3d5d7c"
                android:text="@string/question_text" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:angle="60"
                android:background="#6597c7"
                android:onClick="primeiraEscolha"
                android:text="@string/question_i" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:angle="60"
                android:background="#6597c7"
                android:onClick="segundaEscolha"
                android:text="@string/question_ii" />
        </LinearLayout>


        <RelativeLayout
            android:id="@+id/layoutProxima"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:visibility="invisible">

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/button_next"
                android:onClick="proximaPagina"
                android:text="@string/button_next"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="20dp" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>